--- a/floating-pane.html
+++ b/floating-pane.html
@@ -14,6 +14,8 @@ color: #fff;
 font-weight: bold;
 display: block;
 padding: 5px;
+display: flex;
+flex-direction: row;
 }
 :host{
 position: fixed;
@@ -23,11 +25,15 @@ transform: translate(400px,100px);
 -webkit-transform: translate(400px, 100px);
 min-width: 200px;
 max-width: 400px;
-background-color: rgba(255,255,255,0.8);
+max-height: 600px;
+background-color: rgba(255,255,255,0.92);
 display: none;
 z-index: 100;
 cursor: move;
 box-shadow: 3px 3px 7px #999;
+}
+.pane_title.wide{
+min-width: 360px;
 }
 .pane_body{
 padding: 5px;
@@ -48,11 +54,24 @@ background: rgba(255,0,0,0.2);
 cursor: default;
 display: table; /* gives auto width, while still being display-block-like */
 }
+input{
+font-size: 0.8em;
+width: 130px;
+margin: -2px;
+}
+.flexer{
+flex:2;
+display: inline-block;
+}
 </style>
 <template>
-	<div class="pane_title"><content select=".pane_title"></content></div>
+	<div class$="pane_title [[_wide(has_search)]]">
+		<content select=".pane_title"></content>
+		<div class="flexer"></div>
+		<input id="search_input" type="search" hidden$="{{!has_search}}" value="{{search_text::input}}" placeholder="[[search_placeholder]]">
+	</div>
 	<div class="pane_body"><content></content></div>
-	<div class="grabber" id="grabber" style$="[[_show(space_is_down)]]"></div>
+	<div class="grabber" id="grabber" hidden$="{{!space_is_down}}"></div>
 </template>
 
 <script>
@@ -68,8 +87,23 @@ Polymer({
 		space_is_down: {
 			type: Boolean,
 			value: false,
-			notfiy: true,
+			notify: true,
 			readOnly: true
+		},
+		has_search: {
+			type: Boolean,
+			value: false,
+			notify: true
+		},
+		search_text: {
+			type: String,
+			value: "",
+			notify: true
+		},
+		search_placeholder: {
+			type: String,
+			value: "search",
+			notify: true,	
 		}
 	}, created: function(){
 		// bind these methods so we can add/remove easily
@@ -81,6 +115,9 @@ Polymer({
 		// I don't get Polymer's listener thing..or maybe I do, but this works fine..
 		this.$.grabber.addEventListener('mouseup', this._on_mouseup.bind(this));
 		this.addEventListener('mousedown', this._on_drag_start.bind(this));
+		this.$.search_input.addEventListener('mousedown', function(e){
+		 e.stopPropagation(); // if it propagates out of the shadow dom, then it will appear to be a mousedown on the pane itself, which would lead to a drag_start
+		});
 		document.addEventListener('keydown', function(e){
 			if(e.which === 32){
 				self._setSpace_is_down(true)
@@ -93,8 +130,6 @@ Polymer({
 		}, true);
 		init_x += 100;
 		this._translate(init_x, 100); // not sure this is that helpful, but hey
-	}, _show: function(v){
-		return v ? '' : 'display: none;'
 	}, _on_mouseup: function(e){
 		this.style.display = 'none';
 	}, _on_drag_start: function(e){
@@ -123,6 +158,8 @@ Polymer({
 	    document.removeEventListener('mouseup', this._on_drag_end_bound, true); 
 	}, _translate: function(x, y){
 		this.style.webkitTransform = 'translate(' + x + "px, " + y + "px)";
+	}, _wide: function(v){
+		return v ? "wide" : "";
 	}
 });
 
